<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Traveloid</string>
    <string name="splash_screen">SplashScreen</string>

    <string name="dialog_title_traveler_setter">Traveler Setter</string>
    <string name="dialog_title_pick_a_default_trip">Pick a default trip</string>
    <string name="dialog_title_select_to_edit">Select to edit</string>

    <string name="name">Name</string>
    <string name="destination">Destination</string>
    <string name="date">Date</string>
    <string name="confirm">Confirm</string>
    <string name="primary">Primary</string>

    <string name="hint_enter_category">Enter Category</string>
    <string name="hint_enter_sub_category">Enter Sub Category</string>
    <string name="hint_enter_traveler_name">Enter Traveler Name</string>
    <string name="hint_enter_trip_destination">Enter Trip Destination</string>

    <string name="menu_add">Add</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_category">Category</string>
    <string name="menu_default">Default</string>
    <string name="menu_report">Report</string>
    <string name="menu_update">Update</string>

    <string name="resolve_edit">Edit note</string>
    <string name="resolve_title">Edit title</string>

    <string name="activity_categories_list">CategoriesList</string>
    <string name="activity_expenses_list">ExpensesList</string>
    <string name="activity_main">Main</string>
    <string name="activity_trip_editor">TripEditor</string>
    <string name="activity_trips_list">TripsList</string>
    <string name="activity_travelers_list">TravelersList</string>
    <string name="activity_pettycash_list">PettyCashList</string>

    <string name="error_argument_id_mandatory">Argument id is mandatory.</string>
    <string name="error_deleting_item">Error deleting item.</string>
    <string name="error_pettycash_not_found">Petty cash not found.</string>
    <string name="error_saving_item">Error Adding/Updating item.</string>
    <string name="error_setting_default_trip">Error setting default trip.</string>
    <string name="error_starting_activity">Error starting activity. Review log for more information.</string>
    <string name="error_trip_not_found">Trip not found.</string>

    <string name="error_unable_to_add_category">Unable to add category.</string>
    <string name="error_unable_to_delete_category">Unable to delete category.</string>
    <string name="error_unable_to_update_category">Unable to update category.</string>

    <string name="error_unable_to_add_expense">Unable to add expense.</string>
    <string name="error_unable_to_delete_expense">Unable to delete expense.</string>
    <string name="error_unable_to_update_expense">Unable to update expense.</string>

    <string name="error_unable_to_add_travler">Unable to add traveler.</string>
    <string name="error_unable_to_delete_traveler">Unable to delete traveler.</string>
    <string name="error_unable_to_update_traveler">Unable to update traveler.</string>

    <string name="error_unable_to_add_trip">Unable to add trip.</string>
    <string name="error_unable_to_delete_trip">Unable to delete trip.</string>
    <string name="error_unable_to_update_trip">Unable to update trip.</string>


    <string name="error_unable_to_add_pettycash">Unable to add petty cash.</string>
    <string name="error_unable_to_delete_pettycash">Unable to delete petty cash.</string>
    <string name="error_unable_to_update_pettycash">Unable to update petty cash.</string>
    <string name="error_unable_to_fetch_all_category">Unable to fetch all category.</string>
    <string name="error_unable_to_fetch_all_expense">Unable to fetch all expense.</string>
    <string name="error_unable_to_fetch_all_pettycash">Unable to fetch all petty cash.</string>
    <string name="error_unable_to_fetch_all_traveler">Unable to fetch all traveler.</string>
    <string name="error_unable_to_fetch_all_trip">Unable to fetch all trip.</string>
    <string name="error_unable_to_fetch_category">Unable to fetch category.</string>
    <string name="error_unable_to_fetch_default_trip">Unable to fetch default trip.</string>
    <string name="error_unable_to_fetch_expense">Unable to fetch expense.</string>
    <string name="error_unable_to_fetch_pettycash">Unable to fetch petty cash.</string>
    <string name="error_unable_to_fetch_traveler">Unable to fetch traveler.</string>
    <string name="error_unable_to_fetch_trip">Unable to fetch trip.</string>
    <string name="error_unable_to_obtain_readable_database">Unable to obtain readable database.</string>
    <string name="error_unable_to_obtain_writable_database">Unable to obtain writable database.</string>
    <string name="error_unable_to_open_database_adapter">Unable to communicate with database. Review log for more information.</string>
    <string name="error_unable_to_save_object_to_database">Unable to save object to database.</string>
    <string name="error_unable_to_set_default_trip">Unable to set default trip.</string>

    <string name="label_amount">Amount :</string>
    <string name="label_category">Category :</string>
    <string name="label_currency">Currency :</string>
    <string name="label_date">Date :</string>
    <string name="label_description">Description :</string>
    <string name="label_destination">Destination :</string>
    <string name="label_name">Name :</string>
    <string name="label_payor">Payor :</string>
    <string name="label_payment_method">Payment Method :</string>
    <string name="label_ref_check_no">Ref/Check No. :</string>
    <string name="label_today_expense">Today Expense :</string>
    <string name="label_total">Total :</string>
    <string name="label_traveler">Traveler :</string>
    <string name="label_trip">Trip :</string>
    <string name="label_exchange_rate">Exchange rate :</string>

    <string name="title_note">Note</string>
    <string name="title_pettycash">Petty Cash</string>
    <string name="title_pettycashs">Petty Cash Accounts</string>
    <string name="title_traveler">Traveler</string>
    <string name="title_travelers">Travelers</string>
    <string name="title_trip">Trip</string>
    <string name="title_trips">Trips</string>
    <string name="title_select_trip">Select a trip</string>
    <string name="title_select_default_trip">Select default trip</string>

    <string name="add_expense">Add Expense</string>
    <string name="add_traveler">Add Traveler</string>
    <string name="add_trip">Add Trip</string>
    <string name="add_pettycash">Add Petty Cash</string>

    <string name="add">Add</string>
    <string name="all_expenses">All expenses</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="default_">Default</string>
    <string name="delete">Delete</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_expense">Edit Expense</string>
    <string name="edit_pettycash">Edit Petty Cash Account</string>
    <string name="edit_traveler">Edit Traveler</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="new_category">New Category</string>
    <string name="new_expense">New Expense</string>
    <string name="new_pettycash">New Petty Cash Account</string>
    <string name="new_sub_category">New Sub-Category</string>
    <string name="new_traveler">New Traveler</string>
    <string name="new_trip">New Trip</string>
    <string name="ok">OK</string>
    <string name="set_default_trip">Set Default Trip</string>
    <string name="save">Save</string>
    <string name="travelers">Travelers</string>
    <string name="view_expense">View Expense</string>


    <string name="message_amount_is_mandatory">Amount is mandatory.</string>
    <string name="message_exchange_rate_is_mandatory">Exchange rate is mandatory.</string>
    <string name="message_are_you_sure_you_want_to_delete_this_trip">Are you sure you want to delete this trip?</string>
    <string name="message_category_is_mandatory">Category is mandatory.</string>
    <string name="message_create_a_trip">Please create a trip</string>
    <string name="message_date_is_mandatory">Date is mandatory.</string>
    <string name="message_destination_is_mandatory">Trip destination is mandatory.</string>
    <string name="message_name_is_mandatory">Name is mandatory.</string>
    <string name="message_no_expense_available">No Expense Available.</string>
    <string name="message_no_sub_category_available">No subcategory available.</string>
    <string name="message_no_traveler_available">No Traveler Available.</string>
    <string name="message_no_trip_available">No Trip Available.</string>
    <string name="message_payor_is_mandatory">Payors are mandatory.</string>
    <string name="message_sub_category_is_mandatory">Sub category is mandatory.</string>
    <string name="message_traveler_is_mandatory">Traveler is mandatory.</string>
    <string name="message_unable_to_create_report">Unable to create report.</string>
    <string name="message_no_pettycash_account_available">No petty cash account available.</string>

    <string name="menu_title_petty_cash">Petty Cash</string>

    <string name="default_payment_method">Credit Card</string>

    <string-array name="payment_methods_array">
        <item>Cash</item>
        <item>Check</item>
        <item>Credit Card</item>
        <item>Debit</item>
        <item>Electronic Transfer</item>
    </string-array>

    <string-array name="categorie_array">
        <item>Food</item>
        <item>Travel</item>
        <item>Automobile</item>
    </string-array>

    <string-array name="sub_categories_array">
        <item>Restaurant|Groceries|Snack|Other</item>
        <item>Airplane|Hotel|Other</item>
        <item>Fuel|Lease|Pay Toll|Repair|Other</item>
    </string-array>

    <string-array name="currency_array">
        <item>CAD</item>
        <item>EUR</item>
        <item>USD</item>
        <item>GBP</item>
    </string-array>

</resources>
