<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="250dip" android:layout_height="wrap_content">

	<EditText android:id="@+id/editTextName"
		 android:padding="2dip" android:inputType="text" android:hint="@string/hint_enter_traveler_name"
		android:layout_height="wrap_content" android:layout_width="fill_parent" />

	<LinearLayout android:layout_width="match_parent"
		android:layout_height="wrap_content" android:layout_below="@id/editTextName" android:background="@color/grey">

		<Button android:text="@string/save" android:id="@+id/buttonSave"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_weight="1" android:enabled="false"/>

		<Button android:text="@string/cancel" android:id="@+id/buttonCancel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_weight="1" />

	</LinearLayout>

</RelativeLayout>
