<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- Message Section -->
    <TextView
        android:id="@+id/textViewMessage"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:visibility="gone"/>

    <!-- Trip Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTripLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_trip"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewTripName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textViewMessage"/>
    </LinearLayout>
    <!-- Name Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewNameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>

    <!-- Description Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewDescriptionLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextName"
            android:text="@string/label_description"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/spinnerCurrency"/>
    </LinearLayout>
    <!-- Amount Section -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewAmountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_amount"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextAmount"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>
    <!-- Exchange Rate Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewExchangeRateLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_exchange_rate"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/editTextExchangeRate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal">
        </EditText>
    </LinearLayout>
    <!-- Currency Section -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewCurrencyLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_currency"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinnerCurrency"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editTextExchangeRate"/>
    </LinearLayout>
    <!-- Button Section -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/save"/>

        <Button
            android:id="@+id/buttonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/back"/>

    </LinearLayout>


</LinearLayout>

